# py_wordsjar

./: .gitignore
.github/workflows/: deploy.yaml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/middleware/: error.py
backend/app/api/v1/: mappers.py  router.py  schemas.py
backend/app/api/v1/routes/: auth.py  exam.py  jar.py  words.py
backend/app/core/: config.py  errors.py
backend/app/db/: postgres.py
backend/app/logger/: __init__.py  logger.py
backend/app/models/: domain.py  mappers.py  orm.py
backend/app/repository/: __init__.py  jar.py  params.py  secret.py  token.py  user.py  word.py
backend/app/services/: __init__.py  auth.py  exam.py  helpers.py  jar.py  pagination.py  words.py
backend/migrations/: env.py
backend/migrations/versions/: 1876d43d3995_create_search_index.py  506c42677451_initial.py
