[project]
name = "wordsjar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "cachetools>=7.1.4",
    "fastapi>=0.136.3",
    "joserfc>=1.7.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[postgres]>=2.0.50",
    "uvicorn>=0.48.0",
]
